bomc-kubernetes-event/bomc-hrm/deployment/istio/istio-bomc-app-virtualservice.yml
# The VirtualService instructs the Ingress Gateway how to route the requests that were allowed into the cluster.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-bomc-app-hrm-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  # This VirtualService applies to requests coming through the istio-bomc-app-gateway.
  - istio-bomc-app-gateway.istio-system.svc.cluster.local
  http:
  - match:
    - uri:
       prefix: /bomc-hrm/bomc-api
    route:
    - destination:
        # The metadata.name, bomc-hrm-service, is the short form of the kubernetes name.
        # bomc-hrm-service.bomc-app.svc.cluster.local is the Fully Qualified Domain Name.
        # The reason for using the fully qualified name is to refer to the Gateway from different namespaces.
        # If the service is in the same namespace the short name should work, here is the service in the
        # namespace bomc-app and the gateway in istio-system.
        host: bomc-hrm-service.bomc-app.svc.cluster.local
        port:
          number: 80
        # subset: v1
  - match:
    - uri:
       prefix: /bomc-hrm/customer
    route:
    - destination:
        # The metadata.name, bomc-hrm-service, is the short form of the kubernetes name.
        # bomc-hrm-service.bomc-app.svc.cluster.local is the Fully Qualified Domain Name.
        # The reason for using the fully qualified name is to refer to the Gateway from different namespaces.
        # If the service is in the same namespace the short name should work, here is the service in the
        # namespace bomc-app and the gateway in istio-system.
        host: bomc-hrm-service.bomc-app.svc.cluster.local
        port:
          number: 80
        # subset: v1
  - match:
    - uri:
       prefix: /bomc-hrm/user
    route:
    - destination:
        # The metadata.name, bomc-hrm-service, is the short form of the kubernetes name.
        # bomc-hrm-service.bomc-app.svc.cluster.local is the Fully Qualified Domain Name.
        # The reason for using the fully qualified name is to refer to the Gateway from different namespaces.
        # If the service is in the same namespace the short name should work, here is the service in the
        # namespace bomc-app and the gateway in istio-system.
        host: bomc-hrm-service.bomc-app.svc.cluster.local
        port:
          number: 80
        # subset: v1
---
